Rakefile otimizado para evitar copias desnecessarias
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@9 31482026-630c-0410-91bb-adf60aae4351

--- a/rakefile
+++ b/rakefile
@@ -8,7 +8,7 @@ task :copy_source do
     builddir = "#{SITE_DIR}/build"
     mkdir builddir
     #TODO remove this os dependency
-    `cp -r #{SITE_DIR}/src/* #{SITE_DIR}/build/`
+    `cp -ru #{SITE_DIR}/src/* #{SITE_DIR}/build/`
 end
 
 task :rails_generate => :copy_source do
