Rakefile agora usando a biblioteca padrao onde possivel
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@10 31482026-630c-0410-91bb-adf60aae4351

--- a/rakefile
+++ b/rakefile
@@ -1,14 +1,12 @@
-SITE_DIR = File.dirname(__FILE__)
+require 'fileutils'
 
-def mkdir(dirname)
-    `mkdir -p #{dirname}`
-end
+SITE_DIR = File.dirname(__FILE__)
 
 task :copy_source do
     builddir = "#{SITE_DIR}/build"
-    mkdir builddir
+    mkdir_p builddir
     #TODO remove this os dependency
-    `cp -ru #{SITE_DIR}/src/* #{SITE_DIR}/build/`
+    `cp -ru #{SITE_DIR}/src/* #{builddir}`
 end
 
 task :rails_generate => :copy_source do
