Rakefile: Correcao para evitar sobreescrever arquivos sem permissao
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@21 31482026-630c-0410-91bb-adf60aae4351

--- a/rakefile
+++ b/rakefile
@@ -12,7 +12,7 @@ def cp_ru(src, dest)
         end
     elsif File.stat(src).file? then
         unless uptodate?(dest, src)
-            copy_file(src, dest)
+            copy_file(src, dest) if File.stat(dest).writable?
         end
     end
 end
