--- a/rakefile
+++ b/rakefile
@@ -2,8 +2,10 @@ require 'fileutils'
 
 SITE_DIR = File.dirname(__FILE__)
 
+include FileTest
+
 def cp_ru(src, dest)
-    if File.stat(src).directory? then
+    if directory?(src) then
         mkdir_p dest
         Dir.foreach(src) do |file|
             unless file == '.' || file == '..'
@@ -12,7 +14,9 @@ def cp_ru(src, dest)
         end
     elsif File.stat(src).file? then
         unless uptodate?(dest, src)
-            copy_file(src, dest) if File.stat(dest).writable?
+            if !exists?(dest) || writable?(dest)
+                copy_file(src, dest)
+            end
         end
     end
 end
