--- a/rakefile
+++ b/rakefile
@@ -1,4 +1,5 @@
 require 'fileutils'
+require 'rake/testtask'
 
 SITE_DIR = File.dirname(__FILE__)
 
@@ -21,13 +22,13 @@ def cp_ru(src, dest)
     end
 end
 
-task :copy_source do
+def copy_source
     builddir = "#{SITE_DIR}/build"
     mkdir_p builddir
     cp_ru "#{SITE_DIR}/src", "#{builddir}"
 end
 
-task :rails_generate => :copy_source do
+def rails_generate
     #the purpose of this ARGV black magic is to pass command
     #line arguments to the rails generate script
     ARGV.slice(0, ARGV.length - 1)
@@ -36,5 +37,15 @@ task :rails_generate => :copy_source do
     load 'rails'
 end
 
-task :default => :rails_generate
+Rake::TestTask.new do |task|
+    task.test_files = FileList["#{SITE_DIR}/src/test/unit/ts_all_suites.rb"]
+    task.verbose = true
+end
+
+task :publish => :test do
+     copy_source
+     rails_generate
+end
+
+task :default => :publish
 
