--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -8,28 +8,27 @@
 development:
   adapter: mysql
   database: build_development
-  host: localhost
+  host: 127.0.0.1
+  port: 3306
   username: motiro
   password:
 
-  # Connect on a TCP socket.  If omitted, the adapter will connect on the
-  # domain socket given by socket instead.
-  #host: localhost
-  #port: 3306
-  
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql
   database: motiro_test
-  host: localhost
+  host: 127.0.0.1
+  port: 3306
   username: motiro
   password:
 
 production:
   adapter: mysql
   database: motiro_production
+  host: 127.0.0.1
+  port: 3306
   username: motiro
   password: 
-  socket: /path/to/your/mysql.sock
+
