Correcoes da view subversion para adequacao aas ultimas modificacoes
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@32 31482026-630c-0410-91bb-adf60aae4351

--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -7,7 +7,7 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql
-  database: build_development
+  database: motiro_development
   host: 127.0.0.1
   port: 3306
   username: motiro
