Primeira versao com cache das manchetes
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@41 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/headlines.yml
+++ b/test/fixtures/headlines.yml
@@ -1,5 +1,12 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-first:
+
+gita:
   id: 1
+  author: raulseixas
+  title: gita
+  event_date: 2005-01-01 00:00:00
 another:
   id: 2
+  author: raulseixas
+  title: o dia em que a terra parou
+  event_date: 2004-02-01 00:00:00
