Adicionado teste de sanidade para headline
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@47 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/headlines.yml
+++ b/test/fixtures/headlines.yml
@@ -5,8 +5,8 @@ gita:
   author: raulseixas
   title: gita
   event_date: 2005-01-01 00:00:00
-another:
+dia_em_que_a_terra_parou:
   id: 2
   author: raulseixas
   title: o dia em que a terra parou
-  event_date: 2004-02-01 00:00:00
+  event_date: 2005-02-01 00:00:00
