Editor-chefe reconhece 'modo de desenvolvimento' (usado para teste e debug)
git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@74 31482026-630c-0410-91bb-adf60aae4351

--- a/config/report/subversion.yml
+++ b/config/report/subversion.yml
@@ -11,3 +11,15 @@ repo: http://svn.berlios.de/svnroot/repos/motiro
 # Default: 5
 package_size: 5
 
+# update_interval
+#
+# The number of minutes to wait before sending the reporters out to update the
+# local news base. The reporters can potentially use external resources like
+# network and disk.
+# Set to 0 to send them out everytime a request arrives and to not record
+# anything locally (useful for testing and debugging)
+#
+# Note: The current version only differentiates betweeen zero (go out with
+# every request) and non-zero, using a default interval of 10 minutes
+update_interval: 10
+
