--- a/test/fixtures/headlines.yml
+++ b/test/fixtures/headlines.yml
@@ -4,9 +4,9 @@ gita:
   id: 1
   author: raulseixas
   title: gita
-  event_date: 2005-01-01 00:00:00
+  happened_at: 2005-01-01 00:00:00
 dia_em_que_a_terra_parou:
   id: 2
   author: raulseixas
   title: o dia em que a terra parou
-  event_date: 2005-02-01 00:00:00
+  happened_at: 2005-02-01 00:00:00
