Agora mostrando o comentario da alteracao completo
O comentario completo da alteracao jah estah disponivel tanto na pagina
principal quanto no feed rss. Porem a coisa soh funciona em modo de 
producao. O modo de desenvolvimento ateh mostra os links, mas eles 
apontam para o lugar errado.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@86 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/headlines.yml
+++ b/test/fixtures/headlines.yml
@@ -5,6 +5,12 @@ gita:
   author: raulseixas
   title: gita
   happened_at: 2005-01-01 00:00:00
+  description: gita
+               
+               This is the CD reissue of the 1974 album and second solo release
+               by Raul Seixas, an important figure of Brazilian rock. Acid
+               critic of establishment, he pardodies several figures of
+               Brazilian showbiz in the rocking "Super-Heróis."
 dia_em_que_a_terra_parou:
   id: 2
   author: raulseixas
