--- a/test/fixtures/headlines.yml
+++ b/test/fixtures/headlines.yml
@@ -11,8 +11,17 @@ gita:
                by Raul Seixas, an important figure of Brazilian rock. Acid
                critic of establishment, he pardodies several figures of
                Brazilian showbiz in the rocking "Super-Heróis."
+
 dia_em_que_a_terra_parou:
   id: 2
   author: raulseixas
   title: o dia em que a terra parou
-  happened_at: 2005-02-01 00:00:00
+  happened_at: 2036-02-01 00:00:00
+
+svn_demo_headline:
+  id: 3
+  author: james
+  title: This is a subversion revision comment
+  happened_at: 2006-03-23 11:10:04
+    
+
