Canal de eventos agora mostra detalhes
A pagina de detalhes usada ainda eh a mesma do subversion. Algumas
esquisitices acontecem por causa disso, como o titulo da pagina
(na barra de titulo do navegador) ser 'Motiro - Subversion' e o rotulo
do artigo dizer 'Revisao e1'


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@128 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/headlines.yml
+++ b/test/fixtures/headlines.yml
@@ -30,6 +30,7 @@ release_event:
   title: Next release planned for April, 26th
   happened_at: 2006-04-26
   reported_by: events
+  rid: e1
     
 meeting_event:
   id: 5
@@ -37,4 +38,5 @@ meeting_event:
   title: Planning meeting
   happened_at: 2006-04-04
   reported_by: events
+  rid: e2
 
