--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -5,4 +5,12 @@ svn_demo_article:
                  
                  The comment is a multiline comment that indicates the purpose
                  of the revision.
-
+                 
+release_event_article:
+    id: 2
+    headline_id: 4
+    description: Motiro's next release is planned for April 26th. Somethings
+                 we will be working on for this release are
+                 
+                 - Fixing bugs on the subversion reporter
+                 - Adding user authentication
