Bug de caching consertado
Testes agora estao verdes. Mas ainda quero melhorar um pouco a interface com o
usuario para mostrar uma mensagem do tipo 'esta alteracao esta com erro, volte
mais tarde'.

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@140 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/changes.yml
+++ b/test/fixtures/changes.yml
@@ -4,14 +4,17 @@ svn_demo_add_trunk_change:
   id: 1
   article_id: 1
   summary: A /trunk
+  resource_kind: dir
 
 svn_demo_add_branches_change:
   id: 2
   article_id: 1
   summary: A /branches
+  resource_kind: dir
 
 svn_demo_add_tags_change:
   id: 3
   article_id: 1
   summary: A /tags
+  resource_kind: dir
   
