--- a/config/report/subversion.yml
+++ b/config/report/subversion.yml
@@ -1,9 +1,3 @@
-# repo
-#
-# Tells the reporter where to find your project's repository
-# Default: http://svn.berlios.de/svnroot/repos/motiro
-repo: http://svn.berlios.de/svnroot/repos/motiro
-
 # package_size
 #
 # Tells the reporter how many headlines to produce by run
@@ -20,4 +14,13 @@ package_size: 5
 # Set to 0 to send them out everytime a request arrives and to not record
 # anything locally (useful for testing and debugging)
 update_interval: 10
+
+# Subversion specific settings
+svn:
+
+# svn/repo
+#
+# Tells the reporter where to find your project's repository
+# Default: http://svn.berlios.de/svnroot/repos/motiro
+  repo: http://svn.berlios.de/svnroot/repos/motiro
 
