--- a/test/fixtures/changes.yml
+++ b/test/fixtures/changes.yml
@@ -2,19 +2,19 @@
 
 svn_demo_add_trunk_change:
   id: 1
-  article_id: 1
+  headline_id: 3
   summary: A /trunk
   resource_kind: dir
 
 svn_demo_add_branches_change:
   id: 2
-  article_id: 1
+  headline_id: 3
   summary: A /branches
   resource_kind: dir
 
 svn_demo_add_tags_change:
   id: 3
-  article_id: 1
+  headline_id: 3
   summary: A /tags
   resource_kind: dir
   
