Moved default repo to Source Forge
--- pt-br --------------

Repositorio padrao movido para o Source Forge


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@270 31482026-630c-0410-91bb-adf60aae4351

--- a/config/motiro.yml
+++ b/config/motiro.yml
@@ -22,5 +22,5 @@ svn:
 #
 # Tells the reporter where to find your project's repository
 # Default: http://svn.berlios.de/svnroot/repos/motiro
-  repo: http://svn.berlios.de/svnroot/repos/motiro
+  repo: https://svn.sourceforge.net/svnroot/motiro
 
