ReporterLoader in place
--- pt-br --------------

ReporterLoader funcionando

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@285 31482026-630c-0410-91bb-adf60aae4351

--- a/config/motiro.yml
+++ b/config/motiro.yml
@@ -16,9 +16,9 @@ package_size: 5
 update_interval: 10
 
 # Subversion specific settings
-svn:
+subversion:
 
-# svn/repo
+# subversion/repo
 #
 # Tells the reporter where to find your project's repository
 # Default: http://svn.berlios.de/svnroot/repos/motiro
