Darcs settings and connection in place
It is much probably possible to extract the common code
between these and its Subversion counter-parts

--- pt-br ----------------

Configuracoes e conexao Darcs funcionando

Provavelmente eh possivel extrair o codigo comum entre estes
e os correpondentes Subversion

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@287 31482026-630c-0410-91bb-adf60aae4351

--- a/config/motiro.yml
+++ b/config/motiro.yml
@@ -23,4 +23,11 @@ subversion:
 # Tells the reporter where to find your project's repository
 # Default: http://svn.berlios.de/svnroot/repos/motiro
   repo: https://svn.sourceforge.net/svnroot/motiro
+  
+# Darcs specific settings
+# Uncomment the lines below to activate darcs reporting
+# darcs:
 
+# darcs/repo
+# Tells the reporter where to find the project's central repository
+#   repo: http://motiro.sf.net/darcsrepos/trunk
