First test for access control
--- pt-br -------

Primeiro teste para controle de acesso


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@310 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,6 +10,16 @@ bob:
   login: bob
   password: b8ccc7b7f539f5ed5b557990935848e5a637d209 # test
   
+john:
+  id: 1000004
+  login: john
+  password: 6b9094cf1f9d7d2b517c88116c757ed30180a55b #lennon
+  
+eric:
+  id: 1000005
+  login: eric
+  password: ba43ae2dac98d836fce3a55d42b5931fa0644631 # clapton
+  
 existingbob:
   id: 1000002
   login: existingbob
