Started to add access control to wiki pages
--- pt-br -----------------

Controle de acesso para paginas wiki iniciado

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@311 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -1,6 +1,19 @@
 main_page:
   id: 1
   name: MainPage
+  editors:  ""
   text: = Motiro =
         
         This is project motiro
+
+johns_page:
+  id: 2
+  name: John_s
+  editors: john
+  text: This is John's page
+  
+bob_and_erics_page:
+  id: 3
+  name: Bob_and_Eric_s
+  editors: bob eric
+  text: This is Bob and Eric's page
