--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -1,6 +1,7 @@
 main_page:
   id: 1
   name: MainPage
+  original_author_id: 1000001
   editors:  ""
   text: = Motiro =
         
@@ -8,6 +9,7 @@ main_page:
 
 johns_page:
   id: 2
+  original_author_id: 1000004
   name: John_s
   editors: john
   text: This is John's page
@@ -15,5 +17,6 @@ johns_page:
 bob_and_erics_page:
   id: 3
   name: Bob_and_Eric_s
+  original_author_id: 1000001
   editors: bob eric
   text: This is Bob and Eric's page
