Now recording the original author
Also created the `current_user' method and did some
refactoring

--- pt-br ---------------------

Agora gravando o autor original

Também foi criado o método `current_user' e feito uma
pequena reestruturacao.


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@316 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -20,3 +20,10 @@ bob_and_erics_page:
   original_author_id: 1000001
   editors: bob eric
   text: This is Bob and Eric's page
+  
+nobodys_page:
+  id: 4
+  name: Unclaimed
+  original_author_id:
+  editors: ""
+  text: This page was created before the wiki access control was in place
