Fix for previous revision (r318)
--- pt-br -------------

Conserto da revisao anterior (r318)

git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@319 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -17,7 +17,7 @@ johns_page:
 bob_and_erics_page:
   id: 3
   name: Bob_and_Eric_s
-  original_author_id: 1000001
+  original_author_id: 1000001 #bob
   editors: bob eric
   text: This is Bob and Eric's page
   
