--- a/config/database.yml
+++ b/config/database.yml
@@ -1,34 +1,14 @@
-# MySQL (default setup).  Versions 4.1 and 5.0 are recommended.
-#
-# Get the fast C bindings:
-#   gem install mysql
-#   (on OS X: gem install mysql -- --include=/usr/local/lib)
-# And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-development:
-  adapter: mysql
-  database: motiro_development
-  host: 127.0.0.1
-  port: 3306
-  username: motiro
-  password:
+login: &login
+  adapter: sqlite3
+  database: db/motirodb.sqlite
 
-# Warning: The database defined as 'test' will be erased and
-# re-generated from your development database when you run 'rake'.
-# Do not set this db to the same as development or production.
-test:
-  adapter: mysql
-  database: motiro_test
-  host: 127.0.0.1
-  port: 3306
-  username: motiro
-  password:
+development:
+  <<: *login
 
 production:
-  adapter: mysql
-  database: motiro_production
-  host: 127.0.0.1
-  port: 3306
-  username: motiro
-  password: 
+  <<: *login
+
+test:
+  database: "db/motirotest.sqlite"
+  <<: *login
 
