Updating default repo on motiro.yml
--- pt-br ------------------

Atualizando repositorio padrao no motiro.yml


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@360 31482026-630c-0410-91bb-adf60aae4351

--- a/config/motiro.yml
+++ b/config/motiro.yml
@@ -21,7 +21,7 @@ subversion:
 # subversion/repo
 #
 # Tells the reporter where to find your project's repository
-# Default: http://svn.berlios.de/svnroot/repos/motiro
+# Default: https://svn.sourceforge.net/svnroot/motiro
   repo: https://svn.sourceforge.net/svnroot/motiro
   
 # Darcs specific settings
