--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,9 @@ AddHandler fcgid-script .fcgi
 AddHandler cgi-script .cgi
 Options +FollowSymLinks +ExecCGI
 
+# All content served below this directory is utf-8 encoded
+AddDefaultCharset utf-8
+
 # If you don't want Rails to look in certain directories,
 # use the following rewrite rules so that Apache won't rewrite certain requests
 # 
