Shows stored title on wiki pages
Titles are not translated yet and may not match to the
displayed text language

--- pt-br ---------------------

Mostra titulo armazenado para as paginas wiki

Os titulos ainda nao sao traduzidos e podem nao casar
com o idioma mostrado no texto


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@428 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -27,3 +27,21 @@ nobodys_page:
   original_author_id:
   editors: ""
   text: This page was created before the wiki access control was in place
+  
+test_page:
+  id: 5
+  name: TestPage
+  kind: common
+  original_author_id: 1000001
+  editors: ""
+  title: 
+  text: This is the page text
+  
+non_matching_title_page:
+  id: 6
+  name: NonMatchingTitlePage
+  kind: common
+  original_author_id: 1000001
+  editors: ""
+  title: The title does not match the name
+  text: This is the page text
