Finally showing last created feature pages on main
Still need to check:

* Not changing the default title does not generate a new one
* Showing the date and last editor on the main page
* Update edit dates after first save

--- pt-br -----------

Finalmente mostrando as mais recentes paginas de recurso na frente

Ainda precisa ser checado:

* Deixar o titulo padrao nao gera um novo
* Mostrar a data e o ultimo editor na pagina de frente
* Atualizar a data de edicao apos a primeira alteracao


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@430 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -45,3 +45,38 @@ non_matching_title_page:
   editors: ""
   title: The title does not match the name
   text: This is the page text
+  
+list_last_modified_features_page:
+  id: 7
+  name: ListLastModifiedFeatures
+  kind: feature
+  original_author_id: 1000001
+  modified_at: 2033-12-27 16:47:00
+  last_editor_id: 1000001
+  editors: ""
+  title: List last modified features
+  text: Motiro should list the last modified feature suggestion pages on the
+        main page
+
+provide_rss_feed_for_last_modified_pages_page:
+  id: 8
+  name: ProvideRSSFeedForLastModifiedPages
+  kind: feature
+  original_author_id: 1000001
+  modified_at: 2033-12-27 12:33:48
+  last_editor_id: 1000004
+  editors: ""
+  title: Provide RSS feed for last modified pages
+  text: There could be an RSS feed for the last modified pages
+  
+events_are_just_special_pages_too_page:
+  id: 9
+  name: EventsAreJustSpecialWikiPagesToo
+  kind: feature
+  original_author_id: 1000001
+  modified_at: 2033-12-25 18:43:31
+  last_editor_id: 1000005
+  editors: ""
+  title: Events are just special wiki pages too
+  text: Event descriptions can be treated just like other regular wiki pages,
+        in the same way that feature suggestion pages are
