Shows previous page versions
--- pt-br ------------

Mostra versoes anteriores das paginas


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@569 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -96,3 +96,13 @@ release_event:
         event pages. This is included as part of the everything is a wiki page
         motto.
  
+changed_page:
+  id: 11
+  name: ChangedPage
+  kind: common
+  original_author_id: 1000004 #john
+  modified_at: 2007-01-22 13:21:26
+  last_editor_id: 1000005 #eric
+  editors: ""
+  title: This page has been edited since creation
+  text: Eric changed the text that John entered
