--- a/test/fixtures/revisions.yml
+++ b/test/fixtures/revisions.yml
@@ -7,6 +7,7 @@ page_creation:
   editors: ""
   title: This page has been created
   text: John entered some text here
+  position: 0
 
 page_edition:
   id: 2
@@ -17,6 +18,7 @@ page_edition:
   editors: ""
   title: This page has been edited since creation
   text: Eric changed the text that John entered
+  position: 1
 
 main_page_creation:
   id: 3
