Tests and fix page history feed
What a shame you didn't do it before!

--- pt-br ----------

Testa e conserta o feed de historico de pagina

Bonito nao ter feito isso antes, hein?


git-svn-id: https://svn.code.sf.net/p/motiro/code/trunk@607 31482026-630c-0410-91bb-adf60aae4351

--- a/test/fixtures/revisions.yml
+++ b/test/fixtures/revisions.yml
@@ -133,4 +133,39 @@ release_event_creation:
   text: The 0.6.1 release will be a bug fixing one and will introduce editable
         event pages. This is included as part of the everything is a wiki page
         motto.
- 
+
+first_multilanguage_revision:
+  id: 15
+  page_id: 12
+  kind: common
+  modified_at: 2007-06-14 12:03:24
+  last_editor_id: 1000004 #john
+  editors: ""
+  title: Multi-language page
+  text: This is the first English version
+        
+        Here is some '''bold''' text.
+        
+        --- pt-br ------------
+        
+        Esta é a primeira versão em português
+        
+        Aqui está um pouco de texto em '''negrito'''.
+
+second_multilanguage_revision:
+  id: 16
+  page_id: 12
+  kind: common
+  modified_at: 2007-06-14 12:06:38
+  last_editor_id: 1000004 #john
+  editors: ""
+  title: Multi-language page
+  text: This is the second English version
+        
+        Here is some '''bold''' text.
+        
+        --- pt-br ------------
+        
+        Esta é a segunda versão em português
+        
+        Aqui está um pouco de texto em '''negrito'''.
