--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -55,3 +55,9 @@ changed_page:
   name: ChangedPage
   kind: common
   modified_at: 2007-01-22 13:21:26
+
+multilanguage_page:
+  id: 12
+  name: MultiLanguagePage
+  kind: common
+  modified_at: 2007-06-14 12:06:38
