--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -59,5 +59,5 @@ changed_page:
 multilanguage_page:
   id: 12
   name: MultiLanguagePage
-  kind: common
+  kind: feature
   modified_at: 2007-06-14 12:06:38
