--- a/test/fixtures/revisions.yml
+++ b/test/fixtures/revisions.yml
@@ -137,11 +137,11 @@ release_event_creation:
 first_multilanguage_revision:
   id: 15
   page_id: 12
-  kind: common
+  kind: feature
   modified_at: 2007-06-14 12:03:24
   last_editor_id: 1000004 #john
   editors: ""
-  title: Multi-language page
+  title: Translated page
   text: This is the first English version
         
         Here is some '''bold''' text.
@@ -155,11 +155,11 @@ first_multilanguage_revision:
 second_multilanguage_revision:
   id: 16
   page_id: 12
-  kind: common
+  kind: feature
   modified_at: 2007-06-14 12:06:38
   last_editor_id: 1000004 #john
   editors: ""
-  title: Multi-language page
+  title: Translated page
   text: This is the second English version
         
         Here is some '''bold''' text.
